tests/js_error/source_locations/expression/yield_star/async_iterator_close_start_throws_module.js
var iterable = {
  [Symbol.asyncIterator]() {
    return {
      next() {
        return { value: 1, done: false };
      },
      get return() {
        throw new Error();
      }
    }
  }
};

async function *generator() {
  yield* iterable;
}

var iter = generator();
await iter.next();
await iter.throw();